[project]
name = "bms-plotter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "horih", email = "seikanbunsiun.17@gmail.com" }
]
dependencies = [
    "flet>=0.24.1",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "kaleido>=0.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bms_plotter"]
